--- a/css/index.css
+++ b/css/index.css
@@ -23,6 +23,7 @@
 .navbar-logo {
     width: 450px;
     height: 150px;
+    filter: brightness(200%) contrast(250%) saturate(200%);
 }
 
 .img-fluid:hover {
@@ -46,7 +47,7 @@
     text-decoration: none;
     cursor: pointer;
     color: #000000;
-    font-weight: 900;
+    font-weight: 200;
     font-size: 23px;
     /* text-decoration: dotted underline; */
 }
@@ -112,6 +113,7 @@
 }
 
 .city {
+    margin-top: 45px;
     text-align: right;
     color: #2d0020;
     text-decoration: overline;
@@ -128,15 +130,16 @@
     background-color: #f0f0f0;
 }
 
-.product-content p {
-    display: inline;
-    margin-left: 38%;
-    border-bottom: 5px solid rgba(255, 99, 2, 0.447);
-    border-top: 5px solid rgba(255, 99, 2, 0.447);
-    border-radius: 4px 50px;
+.product-content span {
+    display: table;
+    margin: 10px auto;
+    margin-top: 30px;
+    border-bottom: 10px solid rgba(248, 136, 66, 0.447);
+    border-top: 10px solid rgba(248, 136, 66, 0.447);
+    border-radius: 40px 50px;
 }
 
-#carousel{
+#carousel {
     margin-top: 50px;
 }
 
@@ -171,16 +174,16 @@
     background-color: #f0f0f0;
 }
 
-.galary-content p {
-    display: inline;
-    margin-left: 38%;
-    border-bottom: 5px solid rgba(255, 99, 2, 0.447);
-    border-top: 5px solid rgba(255, 99, 2, 0.447);
-    border-radius: 4px 50px;
-    /* margin-bottom: 50px; */
+.galary-content span {
+    display: table;
+    margin: 10px auto;
+    border-bottom: 10px solid rgba(248, 136, 66, 0.447);
+    border-top: 10px solid rgba(248, 136, 66, 0.447);
+    border-radius: 40px 50px;
 }
 
-#carousel2{
+
+#carousel2 {
     margin-top: 50px;
 }
 
@@ -195,15 +198,15 @@
 #nineth-galary-image,
 #tenth-galary-image,
 #eleventh-galary-image {
-    width: 510px;
+    width: 650px;
     border-radius: 25px 35px;
     margin: auto;
 }
 
 #zigzag-card-design {
     margin: auto;
-    width: 500px;
-    height: 450px;
+    width: 650px;
+    height: 550px;
     border-radius: 25px 35px;
 }
 
@@ -217,16 +220,17 @@
     background-color: #f0f0f0;
 }
 
-.about-content h1 {
-    display: inline;
-    /* margin-left: 30%; */
-    border-bottom: 5px solid rgba(255, 99, 2, 0.447);
-    border-top: 5px solid rgba(255, 99, 2, 0.447);
-    border-radius: 4px 50px;
+.about-content span {
+    display: table;
+    margin: 10px auto;
+    border-bottom: 10px solid rgba(248, 136, 66, 0.447);
+    border-top: 10px solid rgba(248, 136, 66, 0.447);
+    border-radius: 40px 50px;
 }
 
 .about-content p {
-    margin: 60px;
+    /* margin: 60px; */
+    margin-top: 40px;
     color: #011344;
 
 }
@@ -240,20 +244,19 @@
     background-color: #f0f0f0;
 }
 
-.contact-content p {
-    /* text-align: center; */
+.contact-content span {
+    display: table;
+    margin: 10px auto;
     color: rgb(255, 255, 255);
-    display: inline;
-    margin-left: 38%;
-    border-bottom: 5px solid rgba(255, 99, 2, 0.447);
-    border-top: 5px solid rgba(255, 99, 2, 0.447);
-    border-radius: 4px 50px;
-
+    border-bottom: 10px solid rgba(248, 136, 66, 0.447);
+    border-top: 10px solid rgba(248, 136, 66, 0.447);
+    border-radius: 40px 50px;
 }
 
 #contact-content div input,
 #contact-content div textarea {
-    margin: 20px;
+    /* margin: 20px; */
+    margin-top: 40px;
     border-radius: 5px 50px;
     border: 9px solid rgba(172, 172, 172, 0.553);
 }
@@ -265,7 +268,11 @@ textarea::placeholder {
 }
 
 #btnSubmit {
-    margin-left: 270px;
+    /* margin-top: 40px; */
+    display: block;
+    margin: 40px auto;
+    margin-bottom: 0;
+    /* margin-left: auto; */
 }
 
 /* footer content started here */
@@ -279,12 +286,20 @@ textarea::placeholder {
     background-color: #f0f0f0;
 }
 
+.footer .row {
+    margin-top: 10px;
+}
+
 .footer-logo {
     width: 450px;
-    height: 200px;
+    height: 210px;
+    margin: auto;
+    filter: brightness(200%) contrast(250%) saturate(200%);
 }
 
 .footer-description {
+    margin-top: 20px;
+    margin-right: 30px;
     font-weight: 900;
     text-align: center;
 }
@@ -310,6 +325,12 @@ textarea::placeholder {
 
 /* responsive design starts here */
 @media only screen and (max-width: 768px) {
+
+    /* for all the element styling is this */
+    * {
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        font-size: 20px;
+    }
 
     /* navabar started here */
     .navbar {
@@ -360,8 +381,7 @@ textarea::placeholder {
         border: 0px solid rgba(255, 99, 2, 0.447);
         border-radius: 40px 50px;
         background-color: #f0f0f0;
-        height: 475px;
-
+        height: 440px;
     }
 
     .home-content .container {
@@ -373,10 +393,11 @@ textarea::placeholder {
         text-decoration: none;
         color: #000000;
         font-weight: 850;
-        font-size: 35px;
-        border-bottom: 5px solid rgba(255, 0, 0, 0.397);
-        border-radius: 50px 90px;
+        font-size: 40px;
         margin-top: 15px;
+        border-bottom: 15px solid rgba(175, 174, 173, 0.447);
+        border-top: 15px solid rgba(175, 174, 173, 0.447);
+        border-radius: 40px 50px;
     }
 
     .deliver {
@@ -384,10 +405,11 @@ textarea::placeholder {
         text-decoration: none;
         color: #000000;
         font-weight: 750;
-        font-size: 35px;
-        border-bottom: 5px solid rgba(255, 0, 0, 0.397);
-        border-radius: 90px 50px;
         margin-top: 60px;
+        font-size: 38px;
+        border-bottom: 15px solid rgba(175, 174, 173, 0.447);
+        border-top: 15px solid rgba(175, 174, 173, 0.447);
+        border-radius: 40px 50px;
     }
 
     .city {
@@ -396,9 +418,10 @@ textarea::placeholder {
         color: #2d0000;
         font-weight: 650;
         font-size: 35px;
-        border-bottom: 5px solid rgba(255, 0, 0, 0.397);
-        border-radius: 50px 90px;
         margin-top: 60px;
+        border-bottom: 15px solid rgba(175, 174, 173, 0.447);
+        border-top: 15px solid rgba(175, 174, 173, 0.447);
+        border-radius: 40px 50px;
     }
 
     /* product content */
@@ -410,28 +433,35 @@ textarea::placeholder {
         background-color: #f0f0f0;
     }
 
-    .product-content .display-4 {
-        margin-top: 20px;
+    .product-content span {
+        display: table;
+        margin: 10px auto;
         font-size: 50px;
-        border-bottom: 5px solid rgba(133, 133, 133);
+        border-top: 10px solid rgba(133, 133, 133);
+        border-bottom: (248, 136, 66, 0.447);
         border-radius: 50px 50px;
-        margin-left: 40px;
+        /* margin-left: 40px; */
+        margin-bottom: 0px;
     }
+
     .zigzag-block {
-        width: 250px;
+        width: 16rem;
         height: 250px;
     }
 
     .cosmic-block {
-        width: 250px;
+        width: 17rem;
         height: 250px;
     }
 
     .rectangle-block {
-        width: 250px;
+        width: 18rem;
         height: 250px;
     }
 
+    .product-content .card-body{
+        padding: 1rem 2rem;
+    }
     .product-content .card-body .list-group-flush>.list-group-item {
         padding: 2px;
         font-size: 15px;
@@ -469,10 +499,14 @@ textarea::placeholder {
         background-color: #f0f0f0;
     }
 
-    .galary-content p {
-        margin-left: 50px;
-        border-bottom: 5px solid rgba(133, 133, 133);
-        border-radius: 50px 50px;
+    .galary-content span {
+        display: table;
+        margin: 10px auto;
+        font-size: 50px;
+        font-weight: 900;
+        border-bottom: 10px solid rgba(248, 136, 66, 0.447);
+        border-top: 10px solid rgba(133,133,133);
+        border-radius: 40px 50px;
     }
 
     #first-galary-image,
@@ -487,7 +521,7 @@ textarea::placeholder {
     #tenth-galary-image,
     #eleventh-galary-image {
         width: 300px;
-        height: 230px;
+        height: 300px;
         /* margin: auto; */
     }
 
@@ -518,17 +552,21 @@ textarea::placeholder {
         background-color: #f0f0f0;
     }
 
-    .about-content h1 {
-        font-size: 40px;
-        border-bottom: 5px solid rgb(133, 133, 133);
-        border-radius: 50px 50px;
+    .about-content span{
+        display: table;
+        margin: 10px auto;
+        font-size: 50px;
+        font-weight: 900;
+        border-bottom: 10px solid rgba(248, 136, 66, 0.447);
+        border-top: 10px solid rgba(133,133,133);
+        border-radius: 40px 50px;
     }
 
     .about-content p {
-        margin: 20px;
+        margin: 40px;
         font-size: 25px;
         color: #011344;
-        border-bottom: 5px solid rgba(255, 0, 0, 0.397);
+        border-bottom: 10px solid rgba(208, 208, 208, 0.776);
         border-radius: 50px 50px;
     }
 
@@ -549,6 +587,15 @@ textarea::placeholder {
         border-radius: 50px 50px;
     }
 
+    .contact-content span{
+        display: table;
+        margin: 10px auto;
+        font-size: 50px;
+        font-weight: 900;
+        border-bottom: 10px solid rgba(248, 136, 66, 0.447);
+        border-top: 10px solid rgba(133,133,133);
+        border-radius: 40px 50px;
+    }
     #contact-content div input,
     #contact-content div textarea {
         margin-left: 5px;
@@ -558,7 +605,9 @@ textarea::placeholder {
     }
 
     #btnSubmit {
-        margin-left: 50px;
+        display: block;
+        margin: 40px auto;
+        margin-bottom: 0;
         color: #ffffff;
         background-color: rgb(133, 133, 133);
         border: 5px solid rgb(209, 209, 209);
@@ -581,6 +630,9 @@ textarea::placeholder {
         width: 350px;
     }
 
+    .footer-img .img-fluid {
+        max-width: 115%;
+    }
 
     .footer-description {
         margin: 10px;
